--- a/src/static/scss/main.scss
+++ b/src/static/scss/main.scss
@@ -1,3 +1,6 @@
+@import './layout/layout.scss';
+@import './components/components.scss';
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,7 +10,28 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+body, html {
+    color: rgb(3, 3, 3);
+    background-color: rgb(250, 250, 250);
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.App {
+    max-width: 900px;
+    margin: auto;
+}
+
+.full-width {
+    width: 100%;
+}
+
+.sql-statement {  
+  border-radius: 3px;
+  border: 1px solid #dbdbde;
+  background-color: #FFF;
+  padding: 20px;
 }
